NBLCE-69 Match slideshow/module sidebar block border-radius: search

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -6,6 +6,7 @@
 nav#block-modulescontent {
   background-color: $bg-shaded;
   border: $border-width solid $primary-dark;
+  border-radius: $border-radius;
   font-family: $header-font-family;
 
   h2 {
