NBLCE-54 Update search results header

--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_search.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_search.scss
@@ -78,11 +78,11 @@ div[data-drupal-selector="views-exposed-form-search-content-page-1"] {
 
 .search-header-result,
 .search-header-no-result {
-  background-image: url(../img/search.png);
+  background-image: url(../img/search-white.png);
   background-position: .5rem 48%;
   background-repeat: no-repeat;
   padding-left: 1.9rem;
 }
 .search-header-no-result {
-  background-image: url(../img/search-none.png);
+  background-image: url(../img/search-none-white.png);
 }
