NBLCE-69 Create/use sr-only mixin (Search box label)

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -9,6 +9,7 @@
 
 // Include custom sub theme rules.
 @import 'custom/variables';
+@import 'custom/mixins';
 @import 'custom/content_sidebar';
 @import 'custom/header';
 @import 'overrides/alert';
