--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_search.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_search.scss
@@ -24,16 +24,7 @@ div[data-drupal-selector="views-exposed-form-search-content-page-1"] {
           width: 100%;
         }
         label {
-          // Emulate BS4's sr-only class.
-          position: absolute;
-          width: 1px;
-          height: 1px;
-          padding: 0;
-          margin: -1px;
-          overflow: hidden;
-          clip: rect(0, 0, 0, 0);
-          white-space: nowrap;
-          border: 0;
+          @include sr-only;
         }
         input[type="text"] {
           border-top-right-radius: 0;
