--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_slick.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_slick.scss
@@ -9,6 +9,8 @@
   }
 
   ul.nav {
+    font-family: Monospace;
+    font-size: 1.25rem;
     margin-right: .25rem;
     margin-top: -2.25rem;
     margin-bottom: 1.5rem;
@@ -25,9 +27,9 @@
       }
 
       button {
-        padding-right: .6em;
-        padding-left: .6em;
-        border-radius: 10rem;
+        padding-right: .55em;
+        padding-left: .55em;
+        border-radius: 50%;
         color: $bg-nav-focus;
         background: $primary;
         border: 1px solid $primary-dark;
@@ -40,6 +42,7 @@
       &.slick-active {
         button {
           border-color: $bg-nav-focus;
+          box-shadow: 0 0 .25rem .1rem $white;
           cursor: default;
         }
       }
