--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -52,20 +52,20 @@ a {
 /* Main content */
 article {
   .text-formatted {
-    h3, h4, h5 {
+    h2, h3, h4, h5 {
       margin-top: 2rem;
     }
 
+    /* Heading top margin exceptions */
     h2 {
-      margin-top: 2rem;
-
       &:nth-child(1) {
         margin-top: .5rem;
       }
-
-      & + h3 {
-        margin-top: 1rem;
-      }
+    }
+    h2 + h3,
+    h3 + h4,
+    h4 + h5 {
+      margin-top: 1rem;
     }
 
     li:not(.list-item-compact) {
