--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
@@ -21,13 +21,16 @@ header {
 
         .dropdown-item {
           color: $white;
+          text-decoration: underline;
+          text-decoration-color: transparent;
+          transition: all .25s ease-in;
 
           &:focus,
           &:hover,
           &:active {
             background: none;
             color: #fcfcfc;
-            text-decoration: underline;
+            text-decoration-color: #fcfcfc;
           }
 
           &.active {
