--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -48,7 +48,15 @@ a {
     text-decoration: underline;
   }
 }
+main a {
+  text-decoration: underline;
+  text-decoration-color: transparent;
+  transition: all .25s ease-in;
 
+  &:hover {
+    text-decoration-color: $secondary;
+  }
+}
 /* Main content */
 article {
   .text-formatted {
