--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -50,7 +50,7 @@ a {
 }
 main a {
   text-decoration: underline;
-  text-decoration-color: transparent;
+  text-decoration-color: rgb(186, 97, 40, .4);
   transition: all .25s ease-in;
 
   &:hover {
