NBLCE-119 Add text decoration color fallback

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -50,7 +50,8 @@ a {
 }
 main a {
   text-decoration: underline;
-  text-decoration-color: rgb(186, 97, 40, .4);
+  text-decoration-color: $primary;
+  text-decoration-color: rgba(186, 97, 40, .4);
   transition: all .25s ease-in;
 
   &:hover {
