--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -131,6 +131,14 @@ ul {
   font-style: italic;
   font-weight: normal;
 }
+.table-col3 {
+  td {
+    width: 40%;
+  }
+  td:nth-child(2) {
+    width: 20%;
+  }
+}
 p.biblio {
   text-indent: -1.5em;
   padding-left: 1.5em;
