NBLCE-69 Add custom class: nested bulleted list within non-bulleted list

--- a/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/style.scss
@@ -117,6 +117,12 @@ ul {
   &.list-no-bullets {
     li {
       list-style-type: none;
+
+      ul.list-bulleted {
+        li {
+          list-style-type: circle;
+        }
+      }
     }
   }
 }
