--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_header.scss
@@ -104,4 +104,9 @@ header {
       }
     }
   }
+  @media screen and (min-width: 992px) {
+    .navbar-brand {
+      text-align: center;
+    }
+  }
 }
