--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -56,16 +56,16 @@ set footer_classes = 'region-footer mt-auto py-2' ~
   (b4_footer_bg_schema != 'none' ? " bg-#{b4_footer_bg_schema}")
 %}
 
-<header class="d-print-none region-header py-2">
+<header class="region-header py-2">
   <div class="container">
   {{ page.header }}  
 
   {% if page.nav_branding or page.nav_main or page.nav_additional %}  
     <div class="row align-items-end">
-      <div class="navbar-brand col-6 col-sm-7 col-lg-3 text-left text-lg-center">
+      <div class="navbar-brand col-6 col-sm-7 col-lg-3">
         {{ page.nav_branding }}
       </div>
-      <div class="navbar col-6 col-sm-5 col-lg-9 pb-lg-4 pl-lg-3">
+      <div class="d-print-none navbar col-6 col-sm-5 col-lg-9 pb-lg-4 pl-lg-3">
         {{ page.nav_main }}
       </div>
       {{ page.nav_additional }}
@@ -120,7 +120,7 @@ set footer_classes = 'region-footer mt-auto py-2' ~
     </div>
   {% endif %}
   <div class="container">
-    <div class="row align-items-center py-2 text-black" role="contentinfo">
+    <div class="row align-items-center no-gutters py-2 text-black" role="contentinfo">
       <div class="col-12 col-md-4 col-lg-3 text-center text-md-left">
         <a class="d-inline-block" href="https://lib.unb.ca" rel="noopener" target="_blank">
           <img alt="UNB Libraries" class="img-fluid" src="/{{ directory }}/dist/img/unb-libraries-black-sm.png">
