NBLCE-103 Add whitespace above footer section re: printing

--- a/custom/themes/nblce_lib_unb_ca/src/scss/print.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/print.scss
@@ -114,13 +114,14 @@
   }
 
   /* Footer Section */
-  footer {
+  .region-footer {
     background: none;
     border: none;
     page-break-inside: avoid;
 
     .row {
       border-top: 1px solid #000;
+      margin-top: 1cm;
     }
 
     div.text-center {
