NBLCE-64 Create Slideshow image style + set as default for Slideshow image media type

--- a/custom/themes/nblce_lib_unb_ca/templates/views-mini-pager.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/views-mini-pager.html.twig
@@ -23,7 +23,7 @@
         </li>
       {% endif %}
       {% if items.current %}
-        <li class="pager__item is-active">
+        <li class="btn pager__item is-active">
           {% trans %}
             Page {{ items.current }}
           {% endtrans %}
