Override Bootstrap4 v2.14 bizarre navbar style changes

--- a/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/_import.scss
@@ -14,6 +14,7 @@
 @import 'custom/header';
 @import 'overrides/alert';
 @import 'overrides/ckeditor';
+@import "overrides/navbar";
 @import 'overrides/node_preview';
 @import 'overrides/search';
 @import 'overrides/skip_link';
