--- a/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_navbar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/overrides/_navbar.scss
@@ -6,18 +6,17 @@
     height: auto;
   }
 }
+
 .navbar-nav {
-  @media (max-width: 767px) {
+  .nav-link {
+    padding-left: .25rem;
+    padding-right: .25rem;
+  }
+
+  @media (max-width: 991px) {
     .dropdown-toggle {
       &::after {
         margin-top: .5rem;
-      }
-    }
-  }
-  @media (min-width: 768px) and (max-width: 991px) {
-    .dropdown-toggle {
-      &::after {
-        margin-top: .33rem;
       }
     }
   }
@@ -28,8 +27,13 @@
     font-size: 1.25rem;
   }
 }
-@media (min-width:1200px) {
+@media (min-width: 1200px) {
   nav#block-modulescontent ul.nav li a {
     font-size: .96rem;
+  }
+}
+@media (max-width: 1199px) {
+  #modules-menu-wrapper .nav-link {
+    font-size: .8rem;
   }
 }
