--- a/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/menu--modules-content.html.twig
@@ -56,14 +56,8 @@
         %}
       <li{{ item.attributes.addClass('nav-item') }}>
         {% if item.is_expanded %}
-          {{
-            link(item.title, item.url, {
-              'class': classes_link,
-              'data-toggle': 'collapse',
-              'data-target': "#item#{menu_item}",
-              'aria-expanded': item.in_active_trail ? 'true' : 'false',
-            })
-          }}
+          <button class="btn btn-block dropdown-toggle p-0 text-wrap" data-target="#item{{menu_item }}"
+          data-toggle="collapse" aria-expanded="{{ item.in_active_trail ? 'true' : 'false' }}">{{ item.title }}</button>
         {% else %}
           {{ link(item.title, item.url, { 'class': classes_link }) }}
         {% endif %}
