NBLCE-63 Add active menu indicator feature for sidebar nav buttons

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -62,6 +62,10 @@ nav#block-modulescontent {
       }
       button {
         font-weight: bold;
+
+        &[aria-expanded="true"] {
+            box-shadow: 0 0 0 0.2rem rgba(186, 97, 40, 0.25);
+        }
       }
       @media (max-width: 991px) {
         button {
