NBLCE-63 Increase sidebar menu link vertical separation

--- a/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
+++ b/custom/themes/nblce_lib_unb_ca/src/scss/custom/_content_sidebar.scss
@@ -78,6 +78,7 @@ nav#block-modulescontent {
         li {
           font-weight: normal;
           margin-bottom: .25rem;
+          margin-top: .25rem;
 
           a {
             font-size: 1rem;
