--- a/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/page.html.twig
@@ -74,8 +74,7 @@
   </div>
 </header>
 
-<main class="region-main-content my-4 my-lg-5">
-  <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+<main id="main-content" class="region-main-content my-4 my-lg-5">
   {% set sidebar_first_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3' %}
   {% set sidebar_second_classes = (page.sidebar_first and page.sidebar_second) ? 'col-12 col-sm-6 col-lg-3' : 'col-12 col-lg-3' %}
   {% set content_classes = (page.sidebar_first and page.sidebar_second) ?
