Post-Bootstrap4 update (2.1.5): purge deprecated text-center class

--- a/custom/themes/nblce_lib_unb_ca/templates/menu--main.html.twig
+++ b/custom/themes/nblce_lib_unb_ca/templates/menu--main.html.twig
@@ -30,7 +30,7 @@
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-  <ul{{ attributes.addClass(['navbar-nav', 'flex-column', 'flex-lg-row', 'd-flex', 'justify-content-end', 'align-items-end', 'justify-content-lg-between', 'text-lg-center']) }}>
+  <ul{{ attributes.addClass(['navbar-nav', 'flex-column', 'flex-lg-row', 'd-flex', 'justify-content-end', 'align-items-end', 'justify-content-lg-between']) }}>
       {% for item in items %}
         {%
           set classes_list_item = [
